tests/paczka2/big_fuzzy/10012821.err
Error in line 4: Qz9 S276 54,87
Error in line 11: Qz9 S276 187,6
Error in line 17: NFC8 A369 53,84
Error in line 29: qb5Xf A369 46,5
Error in line 30: Qz9 A131 11,4
Error in line 32: Qz9 A811 86,2
Error in line 41: Is9E S276 27,6
Error in line 42: Is9E A369 49,3
Error in line 62: qb5Xf A369 51,5
Error in line 57: Is9E S276 237,1
Error in line 65: Is9E A131 85,0
Error in line 69: HcD8KIM S276 58,53
Error in line 70: HcD8KIM S276 207,5
Error in line 72: HcD8KIM A369 7,8
Error in line 111: Qz9 A811 5,7
Error in line 113: BKiWz0u A811 68,0
Error in line 119: Qz9 S276 89,7
Error in line 101: qb5Xf A811 25,1
Error in line 122: qb5Xf A369 52,0
Error in line 140: NFC8 S276 88,5
Error in line 150: HcD8KIM A131 35,9
Error in line 151: qb5Xf S276 91,9
Error in line 154: qb5Xf A369 -5,0
Error in line 152: HcD8KIM A369 13,3
Error in line 157: qb5Xf A369 66,8
Error in line 160: HcD8KIM A811 98,2
Error in line 167: Qz9 S276 84,9
Error in line 161: qb5Xf A811 0,0
Error in line 173: Is9E S276 24,6
Error in line 188: Qz9 A369 90,6
Error in line 191: Qz9 A131 65,6
Error in line 199: Is9E S276 232,9
Error in line 214: Is9E A131 -1,2
Error in line 218: Qz9 A811 51,8
Error in line 212: Is9E A131 27,5
Error in line 223: BKiWz0u A131 8,67
Error in line 225: BKiWz0u A811 91,4
Error in line 228: BKiWz0u S276 95,7
Error in line 226: A811 A131 40,8
Error in line 241: qb5Xf A811 64,8
